feat: add global exception filter and logging middleware
- Updated package.json to include necessary dependencies for NestJS and logging.
- Implemented GlobalExceptionFilter to handle exceptions globally and log errors.
- Created HttpError interface for consistent error handling.
- Developed logEvents function and LoggerMiddleware to log requests and errors to files.

--- a/package.json
+++ b/package.json
@@ -27,17 +27,24 @@
     ],
     "author": "",
     "license": "ISC",
-    "dependencies": {},
+    "dependencies": {
+        "@nestjs/common": "^11.1.8",
+        "@nestjs/core": "^11.1.8",
+        "date-fns": "^4.1.0",
+        "reflect-metadata": "^0.2.2",
+        "rxjs": "^7.8.2",
+        "uuid": "^13.0.0"
+    },
     "devDependencies": {
         "@types/dotenv": "^6.1.1",
         "@types/node": "^20.0.0",
-        "typescript": "^5.0.0",
-        "ts-node": "^10.9.0",
-        "nodemon": "^3.0.0",
-        "eslint": "^8.0.0",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
-        "prettier": "^3.0.0"
+        "eslint": "^8.0.0",
+        "nodemon": "^3.0.0",
+        "prettier": "^3.0.0",
+        "ts-node": "^10.9.0",
+        "typescript": "^5.0.0"
     },
     "workspaces": [
         "shared",
