--- a/services/push-notification-service/package.json
+++ b/services/push-notification-service/package.json
@@ -14,33 +14,33 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@notification-system/shared": "1.0.0",
     "@nestjs/common": "^10.3.0",
     "@nestjs/core": "^10.3.0",
-    "@nestjs/platform-express": "^10.3.0",
     "@nestjs/microservices": "^10.3.0",
-    "firebase-admin": "^12.0.0",
-    "web-push": "^3.6.6",
+    "@nestjs/platform-express": "^10.3.0",
+    "@notification-system/shared": "1.0.0",
     "amqplib": "^0.10.3",
-    "ioredis": "^5.3.2",
-    "class-validator": "^0.14.0",
+    "axios": "^1.6.2",
     "class-transformer": "^0.5.1",
-    "rxjs": "^7.8.1",
-    "reflect-metadata": "^0.1.14",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
-    "axios": "^1.6.2"
+    "firebase-admin": "^12.0.0",
+    "ioredis": "^5.3.2",
+    "reflect-metadata": "^0.1.14",
+    "rxjs": "^7.8.1",
+    "web-push": "^3.6.6"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.2.1",
+    "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^10.0.3",
     "@nestjs/testing": "^10.3.0",
     "@types/amqplib": "^0.10.4",
-    "@types/web-push": "^3.6.3",
-    "@types/node": "^20.10.5",
     "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.5",
+    "@types/web-push": "^3.6.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.3.3",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
