--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -17,36 +17,36 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
-    "@notification-system/shared": "1.0.0",
     "@nestjs/common": "^10.3.0",
     "@nestjs/core": "^10.3.0",
-    "@nestjs/platform-express": "^10.3.0",
-    "@nestjs/swagger": "^7.1.17",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/swagger": "^7.1.17",
+    "@notification-system/shared": "1.0.0",
+    "@prisma/client": "^5.7.1",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "bcrypt": "^5.1.1",
-    "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1",
-    "@prisma/client": "^5.7.1",
-    "rxjs": "^7.8.1",
     "reflect-metadata": "^0.1.14",
-    "dotenv": "^16.3.1"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.2.1",
+    "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^10.0.3",
     "@nestjs/testing": "^10.3.0",
-    "@types/express": "^4.17.21",
-    "@types/passport-jwt": "^4.0.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20.10.5",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.5",
+    "@types/passport-jwt": "^4.0.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
     "prisma": "^5.7.1",
-    "typescript": "^5.3.3",
-    "ts-node": "^10.9.2"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
