--- a/api-gateway/tsconfig.json
+++ b/api-gateway/tsconfig.json
@@ -27,6 +27,7 @@
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true
   },
+    "include": ["src/**/*"],
   "exclude": [
     "node_modules",
     "dist",
