Moved template service and related configurations
- Deleted the `package.json` file, removing the notification system's workspace configuration.
- Removed the `.env.example` file and `.gitignore` for the template service.
- Deleted the Dockerfile and all Python files related to the template service, including the main application logic and database connection setup.
- Cleared out the `requirements.txt` for the template service, removing all dependencies.
- Removed the TypeScript configuration file `tsconfig.base.json`.

--- a/.github/workflows/template-service.yml
+++ b/.github/workflows/template-service.yml
@@ -6,11 +6,11 @@ on:
       - main
       - template-service-dev
     paths:
-      - 'services/template-service/**'
+      - 'template-service/**'
       - '.github/workflows/template-service.yml'
   pull_request:
     paths:
-      - 'services/template-service/**'
+      - 'template-service/**'
 
 permissions:
   contents: read
@@ -33,9 +33,9 @@ jobs:
 
       - name: Run Black (check)
         run: |
-          echo "Running black --check on services/template-service"
+          echo "Running black --check on template-service"
           black --version || true
-          black --check services/template-service
+          black --check template-service
 
   docker-run:
     name: Build and run Docker (sanity)
@@ -62,8 +62,8 @@ jobs:
       - name: Build and load Docker image locally
         uses: docker/build-push-action@v4
         with:
-          context: services/template-service
-          file: services/template-service/Dockerfile
+          context: template-service
+          file: template-service/Dockerfile
           push: false
           load: true
           tags: template-service:ci
