--- a/services/packages/user-service/package.json
+++ b/services/packages/user-service/package.json
@@ -75,6 +75,7 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": ["<rootDir>/src/setup-jest.ts"]
   }
 }
