--- a/.github/workflows/push-ci-cd.yml
+++ b/.github/workflows/push-ci-cd.yml
@@ -22,13 +22,13 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
-        working-directory: push_service
+        working-directory: "notification-system/services/push-notification-service"
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run tests
-        working-directory: push_service
+        working-directory: "notification-system/services/push-notification-service"
         run: pytest
 
   deploy:
