chore: fixing github workflow

--- a/.github/workflows/push-ci-cd.yml
+++ b/.github/workflows/push-ci-cd.yml
@@ -3,10 +3,10 @@ name: Push Notification CI CD Pipeline
 on:
   push:
     branches:
-      - feat/add-push-notification-service
+      - main
   pull_request:
     branches:
-      - feat/add-push-notification-service
+      - main
 
 jobs:
   tests:
@@ -33,7 +33,7 @@ jobs:
 
   deploy:
     needs: tests
-    if: github.ref == 'refs/heads/feat/add-push-notification-service' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     runs-on: ubuntu-latest
 
     steps:
