--- a/template-service/Dockerfile
+++ b/template-service/Dockerfile
@@ -1,32 +1,40 @@
 FROM python:3.12-slim
 
+# Prevent Python from writing .pyc files and buffering stdout/stderr
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     PORT=80
 
 WORKDIR /app
 
+# Install system dependencies
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
        build-essential \
        libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
+# Copy and install Python dependencies
 COPY requirements.txt .
-
 RUN python -m venv /venv \
     && /venv/bin/pip install --upgrade pip setuptools wheel \
     && /venv/bin/pip install --no-cache-dir -r requirements.txt
 
+# Ensure venv binaries are in PATH
 ENV PATH="/venv/bin:$PATH"
 
+# Copy application code
 COPY . .
 
+# Create non-root user
 RUN useradd --create-home --shell /bin/bash appuser \
     && chown -R appuser:appuser /app
 
 USER appuser
 
-EXPOSE 80
+# Expose platform port
+EXPOSE ${PORT}
 
+# Use dynamic port for Uvicorn
 CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT}"]
+
